css/styles.css
@import url("css/mq.css");

/********* VARIABLES ***********/

/********* BASIC STYLES ***********/

body {
    font-family: 'Josefin Sans', sans-serif;
    margin: 0 auto;
    background-color: #fff;
    color: #45454b;
    
}

.page-title {
    margin: 1em 1em;
}

.content-wrapper {
    margin: 0 auto;
    width: 90%;
    
}

/********* FORM STYLES **********/

.section-title {
    padding-top: 1rem;
};

.first-row {
    padding-top: 2rem;
}

.lower-row {
    padding-top: 0.8rem;
}

/********* COMPONENTS ***********/
button {
    background-color: #1b79a8;
    border: none;
    color: white;
    padding: 16px 32px;
    text-decoration: none;
    margin: 4px 2px;
    cursor: pointer;
}

/********* NAVBAR STYLING ***********/
.main-nav {
    width: 100%;
    display: block;
}

.nav-list {
    list-style-type: none;
    margin: 0 auto;
    padding: 0;
    background-color: #1b79a8;
    display: block;
    justify-content: center;
}

.nav-list ul {
    justify-content: flex-end;
    position: relative;
}

.nav-list li a {
    display: block;
    color: #fff;
    text-align: center;
    padding: 1em 1em;
    text-decoration: none;
    font-size: 1.2em;
}

.logo {
    text-transform: uppercase;
    margin-top: 0;
    margin-left: 0;
}

li a:hover:not(.active) {
    background-color: #0000ff8a;
}

.active {
    background-color: #0000ff8A;
}

/********* PET DISPLAY PAGE STYLING ***********/

.pet-display-page-wrapper {
    width: 80%;
    margin: 0 auto;
    display: block;
    
}

.pet-display-page-wrapper h1 {
    text-align: center;
}

.pet-display-page-wrapper > p {
    font-size: 1.2em;
}

#firstRow {  /* Starting container for pet display page */ 
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
}

#firstRow > div {  /* pet card Div */
    display: flex;
    flex-flow: column nowrap;
    align-content: space-around;
    flex: 1 1 50%;
    text-align: center;
    padding: 0.5em;
    background-color: #f4eade;
    margin: 0.5em;
    padding-top: 1em;
    border-radius: 5%;
    line-height: 1.5;
}

#firstRow > div > h3 {
    text-align: center;
}

#firstRow div img {
    width: 90%;
    height: height;
    border-radius: 5%;
    margin-top: 0.5em;
    box-shadow: 0 5px 9px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
}

.pet-data {
    width: 80%;
    text-align: left;
    margin: 2em;
}

.read-pet {
    width: 30%;
    justify-content: center;
}

/* ADOPTION APPLICATION STYLING */

